--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,13 @@
   margin-top: 10px;
 }
 
+.blackLight {
+  /*background-color: #000;*/
+  color: red;
+  font-size: 18px;
+  font-weight: 700;
+}
+
 .boxHeader {
   font-size: 30px;
   margin: 10px 0 20px 0;
